--- a/launch_oci_compute_instance.yaml
+++ b/launch_oci_compute_instance.yaml
@@ -93,21 +93,21 @@
         debug:
           msg: "Public IP of launched instance {{ instance_public_ip }}"
 
-      - name: Wait (upto 10 minutes) for port 22 to become open
-        wait_for:
-          port: 22
-          host: '{{ instance_public_ip }}'
-          state: started
-          delay: 10
-          timeout: 600
-        vars:
-          ansible_connection: local
+      #- name: Wait (upto 10 minutes) for port 22 to become open
+      #  wait_for:
+      #    port: 22
+      #    host: '{{ instance_public_ip }}'
+      #    state: started
+      #    delay: 10
+      #    timeout: 600
+      #  vars:
+      #    ansible_connection: local
 
-      - set_fact:
+      #- set_fact:
           # Use "opc" user as this is an OL image
           # Disable SSH's strict host key checking just for this one command invocation
           #ssh_command_with_generated_key: ssh -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" -i {{ temp_certificates_path }}/private_key.pem opc@{{ instance_public_ip }} uname -a
-          ssh_command_with_custom_key: ssh -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" -i ./ssh/{{ ssh_authorized_keys }} opc@{{ instance_public_ip }} uname -a
+       #   ssh_command_with_custom_key: ssh -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" -i ./ssh/{{ ssh_authorized_keys }} opc@{{ instance_public_ip }} uname -a
         #when: "'SAMPLE_PUBLIC_SSH_KEY' not in ansible_env"
       
       #- set_fact:
@@ -116,19 +116,19 @@
       #    ssh_command_with_custom_key: ssh -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" opc@{{ instance_public_ip }} uname -a
       #  when: "'SAMPLE_PUBLIC_SSH_KEY' in ansible_env"
 
-      - name: Attempt a ssh connection to the newly launched instance
+     # - name: Attempt a ssh connection to the newly launched instance
         #command: "{{ ssh_command_with_custom_key if 'SAMPLE_PUBLIC_SSH_KEY' in ansible_env else ssh_command_with_generated_key }}"
-        command: "{{ ssh_command_with_custom_key }}"
-        retries: 3
-        delay: 5
-        register: result
-        until: result.rc == 0
+      #  command: "{{ ssh_command_with_custom_key }}"
+      #  retries: 3
+      #  delay: 5
+      #  register: result
+      #  until: result.rc == 0
 
-      - name: Print SSH response from launched instance
-        debug:
-          msg: "SSH response from instance -> {{ result.stdout_lines }}"
+    #  - name: Print SSH response from launched instance
+    #    debug:
+    #      msg: "SSH response from instance -> {{ result.stdout_lines }}"
 
-      - import_tasks: teardown.yaml
+    #  - import_tasks: teardown.yaml
 
       rescue:
 
