--- a/oci_launch_instance.yaml
+++ b/oci_launch_instance.yaml
@@ -41,16 +41,16 @@
           - set_fact:
               SSH_AUTHORIZED_KEYS: "{{ lookup('file', './ssh/oci_id_rsa.pub') }}"
       - name: Launch an instance
-          oci_compute_instance:
-            availability_domain: "{{ instance_ad }}"
-            compartment_id: "{{ instance_compartment }}
-            name: "my_test_instance
-            image_id: "{{ instance_image }}"
-            shape: "{{ instance_shape }}"
-          create_vnic_details:
-            assign_public_ip: True
-            hostname_label: "{{ instance_hostname }}"
-            subnet_id: "{{ instance_subnet_id }}
+        oci_compute_instance:
+          availability_domain: "{{ instance_ad }}"
+          compartment_id: "{{ instance_compartment }}
+          name: "my_test_instance
+          image_id: "{{ instance_image }}
+          shape: "{{ instance_shape }}"
+        create_vnic_details:
+          assign_public_ip: True
+          hostname_label: "{{ instance_hostname }}"
+          subnet_id: "{{ instance_subnet_id }}
         metadata:
           ssh_authorized_keys: "{{ SSH_AUTHORIZED_KEYS }}"
         register: result
