--- a/launch_oci_compute_instance.yaml
+++ b/launch_oci_compute_instance.yaml
@@ -24,7 +24,7 @@
     route_table_name: "myroutetable"
     # route all internet access to our Internet Gateway
     route_table_rules:
-        - cidr_block: "{{ quad_zero_route }}"
+      - cidr_block: "{{ quad_zero_route }}"
           network_entity_id: "{{ ig_id }}"
 
 
@@ -50,10 +50,10 @@
 
   tasks:
     - block:
-      - import_tasks: setup.yaml
+        - import_tasks: setup.yaml
 
       - set_fact:
-          #SSH_AUTHORIZED_KEYS: "{{ lookup('env', 'SAMPLE_PUBLIC_SSH_KEY') if 'SAMPLE_PUBLIC_SSH_KEY' in ansible_env else lookup('file',  my_test_public_key ) }}"
+          # SSH_AUTHORIZED_KEYS: "{{ lookup('env', 'SAMPLE_PUBLIC_SSH_KEY') if 'SAMPLE_PUBLIC_SSH_KEY' in ansible_env else lookup('file',  my_test_public_key ) }}"
           SSH_AUTHORIZED_KEYS: "{{ lookup('file', './ssh/oci_id_rsa.pub') }}"
       - name: Launch an instance
         oci_compute_instance:
@@ -63,7 +63,7 @@
           image_id: "{{ instance_image }}"
           shape: "{{ instance_shape }}"
           create_vnic_details:
-              assign_public_ip: True
+            assign_public_ip: true
               hostname_label: "{{ instance_hostname }}"
               subnet_id: "{{ instance_subnet_id }}"
           metadata:
@@ -117,7 +117,7 @@
         debug:
           msg: "SSH response from instance -> {{ result.stdout_lines }}"
 
-    #  - import_tasks: teardown.yaml
+      #  - import_tasks: teardown.yaml
 
       rescue:
 
