--- a/launch_oci_compute_instance.yaml
+++ b/launch_oci_compute_instance.yaml
@@ -145,7 +145,7 @@
           oci_compute_instance:
             availability_domain: "{{ instance_ad }}"
             compartment_id: "{{ instance_compartment }}"
-            name: "my_test_instance"
+            name: "OLAM_instance"
             image_id: "{{ instance_image }}"
             shape: "{{ instance_shape }}"
             create_vnic_details:
