--- a/launch_oci_compute_instance.yaml
+++ b/launch_oci_compute_instance.yaml
@@ -20,7 +20,7 @@
     quad_zero_route: "0.0.0.0/0"
     TCP_protocol: "6"
     SSH_port: "22"
-    path_to_ssh_key: "/var/lib/awx/projects/ssh/oci_id_rsa.pub"
+    path_to_ssh_key: "./ssh/oci_id_rsa.pub"
 
     vcn_name: "OLAM-vcn"
     vcn_cidr_block: "10.0.0.0/16"
