--- a/launch_oci_compute_instance.yaml
+++ b/launch_oci_compute_instance.yaml
@@ -16,6 +16,7 @@
   collections:
     - oracle.oci
   vars:
+    rescue_test: "1"
     # common networking definitions
     quad_zero_route: "0.0.0.0/0"
     TCP_protocol: "6"
@@ -185,9 +186,7 @@
           when: test_rescue = true
           
         - name: Fail task when the command error output prints No such file or directory (for testing the rescue section)
-          command: /bin/rubbish
-          register: command_result
-          failed_when: "'No such file or directory' in command_result.stderr"
+          failed_when: "{{ rescue_test }} == 1
             
       rescue:
         - name: Terminate the instance
