--- a/launch_oci_compute_instance.yaml
+++ b/launch_oci_compute_instance.yaml
@@ -186,7 +186,9 @@
           when: test_rescue = true
           
         - name: Fail task when the command error output prints No such file or directory (for testing the rescue section)
-          failed_when: "{{ rescue_test }} == 1"
+          fail:
+            msg: "Resuce debug is enabled, we will fail to test the rescue steps"
+          when: "{{ rescue_test }} == 1"
             
       rescue:
         - name: Terminate the instance
