--- a/oci_create_instance.yaml
+++ b/oci_create_instance.yaml
@@ -178,7 +178,7 @@
             
         - name: Fail task when variable rescue_test is set to true (for testing the rescue section)
           fail:
-            msg: "Resuce debug is enabled, we will fail to test the rescue steps"
+            msg: "Rescue debug is enabled, we will fail to test the rescue steps"
           when: "( rescue_test )"
             
       rescue:
