--- a/list_oci_compartment.yaml
+++ b/list_oci_compartment.yaml
@@ -6,7 +6,7 @@
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 #
-# Description: Playbook to list object storage buckets within OCI
+# Description: Playbook to list a compartment within OCI
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
