--- a/ovirt_create_vm.yaml
+++ b/ovirt_create_vm.yaml
@@ -10,12 +10,17 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
+olvm_fqdn: ovirt.it.oracle.com
+olvm_user: shayler@internal
+olvm_cafile: /etc/pki/ovirt-engine/ca.pem
+
 # Variables applicable to all vms
 # 
 # OLVM VM create details
 #
-olvm_cluster: Default
-olvm_template: OL7u7-SLIM
+olvm_cluster: cluster03
+olvm_template: OL8U6_x86_64-olvm-b126_NODE03
+vm_ram: 512MiB
  
 # Cloud init variables
 #
@@ -24,12 +29,14 @@ vm_dns_domain: example.com
 vm_gateway: 192.168.100.1
 vm_netmask: 255.255.255.0
 vm_timezone: Europe/London
+vm_hostname: vm01.example.com
+vm_ip_address: 192.168.100.41
 
 ---
 - hosts: all
   become: yes
-  become_method: sudo
-  gather_facts: no
+  #become_method: sudo
+  #gather_facts: no
   vars_files:
     - /var/lib/awx/projects/files/ovirt_passwords.yaml
     
@@ -43,14 +50,14 @@ vm_timezone: Europe/London
         insecure: "{{ olvm_insecure | default(true) }}"
       tags:
         - always
-    - name: Create Virtual Machine(s)
+    - name: Create Virtual Machine
       ovirt_vm:
         auth: "{{ ovirt_auth }}"
         cluster: "{{ olvm_cluster | default('Default') }}"
         template: "{{ olvm_template }}"
         name: "{{ item }}"
         state: running
-        memory: "{{ hostvars[item]['vm_ram'] | default('1GiB') }}"
+        memory: "{{ vm_ram }}"
         high_availability: yes
         cloud_init:
           host_name: "{{ hostvars[item]['ansible_host'] }}"
@@ -61,16 +68,15 @@ vm_timezone: Europe/London
           nic_name: "{{ vm_nicname | default('eth0') }}"
           nic_on_boot: true
           nic_boot_protocol: static
-          nic_ip_address: "{{ hostvars[item]['ansible_ssh_host'] }}"
+          nic_ip_address: "{{ vm_ip_address }}"
           nic_gateway: "{{ vm_gateway }}"
           nic_netmask: "{{ vm_netmask }}"
           timezone: "{{ vm_timezone }}"
           custom_script: |
             runcmd:
-              - hostnamectl set-hostname {{ hostvars[item]['ansible_host'] }}
+              - hostnamectl set-hostname {{ vm_hostname }}
               - yum -y remove cloud-init
-        wait: true
-      loop: "{{ groups['virtualmachines'] }}"
+      
     - name: Cleanup OLVM auth token
       ovirt_auth:
         ovirt_auth: "{{ ovirt_auth }}"
